<?xml version="1.0"?>
<package>
  <name>genjs</name>
  <version>0.4.15</version>
  <description>
  Javascript ROS message and service generators.
  </description>
  <maintainer email="csmith@rethinkrobotics.com">Chris Smith</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>javascript</message_generator>
  </export>
</package>
